# assembler

./: .gitignore  CMakeLists.txt  README.md  assembler.c  makefile
analysis/: analysis.c  analysis.h  commands.c  commands.h  conditions.c  conditions.h  makefile  test_analysis.c
assemble/: 1.demo  assemble.c  assembler.c  compiler.c  compiler.h  demo.asm  demo.asm.object  makefile  test_assemble.c
demos/: 1.demo  makefile
parser/: compiler.h.save  makefile  parser.c  parser.h  test_parser.c
